; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_repeatcharset.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_lpeg.c_repeatcharset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@CHARSETINSTSIZE = common dso_local global i64 0, align 8
@ISpan = common dso_local global i32 0, align 4
@k = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32)* @repeatcharset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @repeatcharset(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* %7, align 4
  %14 = mul nsw i32 %12, %13
  %15 = sext i32 %14 to i64
  %16 = load i64, i64* @CHARSETINSTSIZE, align 8
  %17 = add nsw i64 %15, %16
  %18 = call %struct.TYPE_6__* @newpatt(i32* %11, i64 %17)
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %10, align 8
  store i32 0, i32* %9, align 4
  br label %19

19:                                               ; preds = %30, %4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %8, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %33

23:                                               ; preds = %19
  %24 = load i32*, i32** %5, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %26 = call i32 @addpatt(i32* %24, %struct.TYPE_6__* %25, i32 1)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %28 = sext i32 %26 to i64
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i64 %28
  store %struct.TYPE_6__* %29, %struct.TYPE_6__** %10, align 8
  br label %30

30:                                               ; preds = %23
  %31 = load i32, i32* %9, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %9, align 4
  br label %19

33:                                               ; preds = %19
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %35 = load i32, i32* @ISpan, align 4
  %36 = call i32 @setinst(%struct.TYPE_6__* %34, i32 %35, i32 0)
  %37 = load i64, i64* @k, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = load i64, i64* @k, align 8
  %40 = getelementptr inbounds i32, i32* %38, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i64 1
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 0
  %45 = load i32*, i32** %44, align 8
  %46 = load i64, i64* @k, align 8
  %47 = getelementptr inbounds i32, i32* %45, i64 %46
  store i32 %41, i32* %47, align 4
  %48 = call i32 @loopset(i64 %37, i32 %41)
  %49 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %50 = call i32 @correctset(%struct.TYPE_6__* %49)
  ret i32 1
}

declare dso_local %struct.TYPE_6__* @newpatt(i32*, i64) #1

declare dso_local i32 @addpatt(i32*, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @setinst(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @loopset(i64, i32) #1

declare dso_local i32 @correctset(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
